--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Users Index</h1>
  <% @users.each do |user| %>
- <%= link_to user.email, user_path %> <br>
+ <%= link_to user.email, user_path(user.id) %> <br>
  <% end %>
  
  <%= link_to "Add User", new_user_path %>
