--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,6 +1,4 @@
-<h1>Contacts</h1>
 <% @contacts.each do |contact| %>
-<%= contact.f_name %>
-<%= contact.l_name %>
-<%= contact.email %>
+<h1><%= contact.f_name %><%= contact.l_name %></h1>
+  <%= contact.email %>
 <% end %>
